# Nova

./: .gitignore  Cargo.toml  README.md  com.lucamignatti.nova.json  file-watcher-fix.md  meson.build  seeking-plan.md
.github/workflows/: flatpak.yml
data/: com.lucamignatti.nova.desktop.in  com.lucamignatti.nova.gschema.xml  com.lucamignatti.nova.metainfo.xml.in  com.lucamignatti.nova.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  main.rs  meson.build  nova.gresource.xml  window.blp  window.rs
src/gtk/: style.css
src/services/: audio_player.rs  error.rs  manager.rs  mod.rs  models.rs  traits.rs
src/services/local/: audio.rs  database.rs  mod.rs  scanner.rs  watcher.rs
src/utils/: background.rs
src/window/: imp.rs  mod.rs  window.blp
src/window/components/: cards.rs  mod.rs  playback.rs  search.rs
src/window/utils/: ui.rs
