[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
gdk = { version = "0.9", package = "gdk4" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
walkdir = "2.5"
id3 = "1.16"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
symphonia = { version = "0.5", features = ["all-codecs"] }
gdk-pixbuf = "0.20"
cairo-rs = "0.20"


[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
