[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = { version = "8.0", features = ["serde"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
gdk = { version = "0.9", package = "gdk4" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
walkdir = "2.5"
id3 = "1.16"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
symphonia = { version = "0.5", features = ["all-codecs"] }
gdk-pixbuf = "0.20"
cairo-rs = "0.20"
futures = "0.3"
fuzzy-matcher = "0.3"
rusqlite = { version = "0.33", features = [
    "bundled",
    "blob",
    "backup",
    "functions",
] }
sha1 = "0.10"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
crossbeam-channel = "0.5"
rayon = "1.10"


[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
